--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <version>1.480.3</version>
   </parent>
 
-  <artifactId>embeddable-build-status</artifactId>
+  <artifactId>embeddable-build-status-kabisa</artifactId>
   <version>1.6-SNAPSHOT</version>
   <packaging>hpi</packaging>
   <url>https://wiki.jenkins-ci.org/display/JENKINS/Embeddable+Build+Status+Plugin</url>
